# relayprobe

./: .env.example  .gitignore  LICENSE  PROJECT_STATUS.md  README.md  README.zh-CN.md  pyproject.toml  quickstart.bat  quickstart.ps1  quickstart.sh
.github/workflows/: test.yml
cases/: core.yaml
docs/: credits.md  github-research.md  github-research.zh-CN.md  local-detection.md  local-detection.zh-CN.md  test-plan.md  test-plan.zh-CN.md
src/relayprobe/: __init__.py  analyzers.py  cases.py  cli.py  local_config.py  runner.py  schemas.py  selftest.py  transport.py  util.py
tests/: test_analyzers.py  test_local_config.py  test_runner.py
